--- a/photo-booth/app.json
+++ b/photo-booth/app.json
@@ -4,7 +4,7 @@
     "slug": "photo-booth",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/LogoSeoulBunsik.png",
     "scheme": "photobooth",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,8 +13,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/images/LogoSeoulBunsik.png",
+        "backgroundColor": "#ffd300"
       },
       "edgeToEdgeEnabled": true
     },
@@ -28,10 +28,10 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
+          "image": "./assets/images/LogoSeoulBunsik.png",
+          "imageWidth": 100,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#ffd300"
         }
       ]
     ],
